Replace String.formatted usages